Add comments main.css

--- a/css/main.css
+++ b/css/main.css
@@ -98,12 +98,55 @@ textarea {
    ========================================================================== */
 
 
+   /* start global classes */
 
 
 
 
+   /* end global classes */
 
 
+   /* start common rules */
+
+
+
+
+   /*End common rules*/
+
+
+
+   /* Start Header style*/
+
+
+
+
+   /*End header style*/
+
+
+
+   /* Start footer style*/
+
+
+
+
+   /*End footer style*/
+
+
+
+   /* Start index main style*/
+
+
+
+
+   /*End index main style*/
+
+
+   /* Start contact main style*/
+
+
+
+
+   /*End contact main style*/
 
 
 
