--- a/css/main.css
+++ b/css/main.css
@@ -104,9 +104,20 @@ textarea {
     display: flex;
   }
 
+  .flexCenter {
+    align-items: center;
+    align-content: center;
+    justify-content: space-around;
+  }
+
   .icon {
     width: 50px;
-    height: 50px;
+    height: 36px;
+    padding: .5em;
+  }
+
+  .tCenter {
+    text-align: center;
   }
    /* end global classes */
 
@@ -138,10 +149,12 @@ ul, li, nav {
 
 p {
   text-align: justify;
+  font-size: 1em;
 }
 
 h1 {
   text-align: center;
+  font-size: 1.5em;
 }
 
    /*End common rules*/
@@ -168,8 +181,11 @@ nav {
   justify-content: space-between;
 }
 
+
+/* <------- responsive 320 ------------> */
+
   @media all and (min-width: 320px) {
-    #NavRegular, ul, .regular {
+    #NavRegular, ul, .regular, video, .logo {
       display: none;
     }
 
@@ -181,10 +197,20 @@ nav {
       display: block;
     }
 
-footer {
-  width: 300px;
-}
+    footer section div {
+      width: 40%;
+      height: 200px;
+      font-size: .8em;
+    }
 
+    footer section {
+      justify-content: center;
+    }
+
+    .mobilArticles {
+      flex-direction: column;
+    }
+  }
 
    /*End header style*/
 
@@ -195,17 +221,16 @@ footer {
 footer {
   text-align: center;
   background-color: #48BF84;
-  display: flex;
   flex-direction: column;
   align-items: center;
   align-content: center;
   justify-content: space-around;
-  padding-bottom: 1.5em;
   position: absolute;
 }
 
-h3 {
+h3, strong {
   text-decoration: underline;
+  background-color: #439775;
 }
 
    /*End footer style*/
