--- a/css/main.css
+++ b/css/main.css
@@ -97,6 +97,57 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+header {
+  background-color: blue;
+}
+
+nav {
+  background-color: gray;
+}
+
+ul {
+  background-color: maroon;
+}
+
+nav aside {
+  background-color: navy;
+}
+
+input {
+  width: 150px;
+}
+
+
+
+
+
+main {
+  background-color: red;
+}
+
+footer {
+  background-color: green;
+}
+
+article {
+  margin: .5em;
+  padding: .5em;
+  background-color: pink;
+}
+
+aside {
+  background-color: purple;
+}
+
+p {
+  background-color: teal;
+}
+
+div {
+  background-color: aqua;
+}
+
+
 
    /* start global classes */
 
@@ -107,55 +158,57 @@ textarea {
   .flexCenter {
     align-items: center;
     align-content: center;
+  }
+
+  .spaceAround {
     justify-content: space-around;
+  }
+
+  .spaceBetween {
+    justify-content: space-between;
   }
 
   .icon {
     width: 50px;
     height: 36px;
-    padding: .5em;
   }
 
   .tCenter {
     text-align: center;
   }
+
+  .tJustify {
+    text-align: justify;
+  }
    /* end global classes */
+
 
 
    /* start common rules */
 
-body {
-  margin: .5em;
-}
+  a:hover {
+    color:black;
+    text-decoration: underline;
+  }
 
-main {
-  width: 95%;
-  margin: auto;
-}
+  nav ul li a {
+    text-decoration: none;
+    color: black;
+  }
 
-a:hover {
-  color:black;
-  text-decoration: underline;
-}
+  ul, li, nav {
+    list-style-type: none;
+  }
 
-nav ul li a {
-  text-decoration: none;
-  color: black;
-}
+  p {
+    text-align: center;
+    font-size: 1em;
+  }
 
-ul, li, nav {
-  list-style-type: none;
-}
-
-p {
-  text-align: center;
-  font-size: 1em;
-}
-
-h1 {
-  text-align: center;
-  font-size: 1.5em;
-}
+  h1 {
+    text-align: center;
+    font-size: 1.5em;
+  }
 
    /*End common rules*/
 
@@ -163,140 +216,15 @@ h1 {
 
    /* Start Header style*/
 
-header {
-  display: flex;
-  flex-direction: column;
-  background-color: #48BF84;
-  padding: 0 2em;
-  position: sticky;
-}
 
-input
-{
-  width: 150px;
-}
-
-nav {
-  align-items: center;
-  justify-content: space-between;
-}
-
-#NavRegular {
-  display: flex;
-}
 
 
    /*End header style*/
-
-   /* <------- responsive 320 ------------> */
-
-@media all and (min-width: 320px) {
-  .NavRegular, ul, .regular, video, .logo {
-    display: none;
-  }
-
-  .MobImg {
-    width: 90%;
-  }
-
-  .NavMobile {
-    display: block;
-  }
-
-  footer section div {
-    width: 40%;
-    height: 200px;
-    font-size: .8em;
-  }
-
-  footer section {
-    justify-content: center;
-  }
-
-  article {
-    width: 300px;
-  }
-
-  .flexmobil {
-    flex-direction: column;
-  }
-}
-
-   /* <------- responsive 640 ------------> */
-
-@media all and (min-width: 640px) {
-  .NavMobile ul, video, {
-    display: none;
-  }
-
-  .NavRegular ul {
-    display: block;
-  }
-
-  footer section div {
-    font-size: 1em;
-  }
-
-  footer section {
-    justify-content: space-around;
-    margin: .5em;
-  }
-
-  article {
-    width: 600px;
-  }
-
-  .flexmobil {
-    flex-direction: row;
-  }
-}
-
-@media all and (min-width: 1280px) {
-  .NavMobile {
-    display: none;
-  }
-
-  .NavRegular, ul, .logo, video {
-    display: block;
-  }
-
-
-
-  footer section div {
-    font-size: 1em;
-  }
-
-  footer section {
-    justify-content: space-around;
-    margin: .5em;
-  }
-
-  article {
-    width: 600px;
-  }
-
-  .flexmobil {
-    flex-direction: row;
-  }
-}
-
 
 
 
    /* Start footer style*/
 
-footer {
-  text-align: center;
-  background-color: #48BF84;
-  align-items: center;
-  align-content: center;
-  justify-content: space-around;
-}
-
-h3, strong {
-  text-decoration: underline;
-  background-color: #439775;
-}
 
    /*End footer style*/
 
@@ -304,24 +232,75 @@ h3, strong {
 
    /* Start index main style*/
 
-   main section p {
-     text-align: justify;
-   }
 
-article {
-  padding: .5em .5em;
-}
 
 
    /*End index main style*/
 
 
+
    /* Start contact main style*/
 
 
-
-
    /*End contact main style*/
+
+
+
+
+   /* <------- responsive 320 ------------> */
+
+    @media all and (min-width: 320px) {
+      ul, .logo, video {
+        display: none;
+      }
+
+      nav {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+
+      nav aside {
+        width: 30%;
+        height: 10vh;
+      }
+
+      input {
+        width: 100px;
+      }
+
+      .img {
+        width: 95%;
+        height: 95%;
+      }
+
+      footer section {
+        justify-content: center;
+      }
+
+    }
+
+   /* <------- responsive 640 ------------> */
+
+    @media all and (min-width: 640px) {
+
+    }
+
+
+    /* <------- responsive 1280 ------------> */
+
+    @media all and (min-width: 1280px) {
+
+    }
+
+
+
+
+
+
+
+
+
 
 
 
